@@ -41,8 +41,10 @@
             this.checkShowTrayIcon = new System.Windows.Forms.CheckBox();
             this.checkUseToolhelpModules = new System.Windows.Forms.CheckBox();
             this.tabHighlighting = new System.Windows.Forms.TabPage();
+            this.label8 = new System.Windows.Forms.Label();
             this.textHighlightingDuration = new System.Windows.Forms.NumericUpDown();
             this.label7 = new System.Windows.Forms.Label();
+            this.colorBeingDebugged = new ProcessHacker.Components.ColorModifier();
             this.colorSystemProcesses = new ProcessHacker.Components.ColorModifier();
             this.colorOwnProcesses = new ProcessHacker.Components.ColorModifier();
             this.label6 = new System.Windows.Forms.Label();
@@ -51,8 +53,8 @@
             this.label4 = new System.Windows.Forms.Label();
             this.colorNewProcesses = new ProcessHacker.Components.ColorModifier();
             this.label3 = new System.Windows.Forms.Label();
-            this.label8 = new System.Windows.Forms.Label();
-            this.colorBeingDebugged = new ProcessHacker.Components.ColorModifier();
+            this.label9 = new System.Windows.Forms.Label();
+            this.colorServiceProcesses = new ProcessHacker.Components.ColorModifier();
             ((System.ComponentModel.ISupportInitialize)(this.textUpdateInterval)).BeginInit();
             this.tabControl.SuspendLayout();
             this.tabGeneral.SuspendLayout();
@@ -91,7 +93,7 @@
             // 
             this.buttonClose.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
             this.buttonClose.FlatStyle = System.Windows.Forms.FlatStyle.System;
-            this.buttonClose.Location = new System.Drawing.Point(284, 228);
+            this.buttonClose.Location = new System.Drawing.Point(284, 243);
             this.buttonClose.Name = "buttonClose";
             this.buttonClose.Size = new System.Drawing.Size(75, 23);
             this.buttonClose.TabIndex = 2;
@@ -149,7 +151,7 @@
             this.tabControl.Location = new System.Drawing.Point(12, 12);
             this.tabControl.Name = "tabControl";
             this.tabControl.SelectedIndex = 0;
-            this.tabControl.Size = new System.Drawing.Size(347, 210);
+            this.tabControl.Size = new System.Drawing.Size(347, 225);
             this.tabControl.TabIndex = 7;
             // 
             // tabGeneral
@@ -206,9 +208,11 @@
             // 
             // tabHighlighting
             // 
+            this.tabHighlighting.Controls.Add(this.label9);
             this.tabHighlighting.Controls.Add(this.label8);
             this.tabHighlighting.Controls.Add(this.textHighlightingDuration);
             this.tabHighlighting.Controls.Add(this.label7);
+            this.tabHighlighting.Controls.Add(this.colorServiceProcesses);
             this.tabHighlighting.Controls.Add(this.colorBeingDebugged);
             this.tabHighlighting.Controls.Add(this.colorSystemProcesses);
             this.tabHighlighting.Controls.Add(this.colorOwnProcesses);
@@ -221,10 +225,19 @@
             this.tabHighlighting.Location = new System.Drawing.Point(4, 22);
             this.tabHighlighting.Name = "tabHighlighting";
             this.tabHighlighting.Padding = new System.Windows.Forms.Padding(3);
-            this.tabHighlighting.Size = new System.Drawing.Size(339, 184);
+            this.tabHighlighting.Size = new System.Drawing.Size(339, 199);
             this.tabHighlighting.TabIndex = 1;
             this.tabHighlighting.Text = "Highlighting";
             this.tabHighlighting.UseVisualStyleBackColor = true;
+            // 
+            // label8
+            // 
+            this.label8.AutoSize = true;
+            this.label8.Location = new System.Drawing.Point(6, 139);
+            this.label8.Name = "label8";
+            this.label8.Size = new System.Drawing.Size(112, 13);
+            this.label8.TabIndex = 6;
+            this.label8.Text = "Debugged Processes:";
             // 
             // textHighlightingDuration
             // 
@@ -251,6 +264,14 @@
             this.label7.Size = new System.Drawing.Size(108, 13);
             this.label7.TabIndex = 4;
             this.label7.Text = "Highlighting Duration:";
+            // 
+            // colorBeingDebugged
+            // 
+            this.colorBeingDebugged.Color = System.Drawing.Color.Transparent;
+            this.colorBeingDebugged.Location = new System.Drawing.Point(127, 137);
+            this.colorBeingDebugged.Name = "colorBeingDebugged";
+            this.colorBeingDebugged.Size = new System.Drawing.Size(40, 20);
+            this.colorBeingDebugged.TabIndex = 3;
             // 
             // colorSystemProcesses
             // 
@@ -320,29 +341,29 @@
             this.label3.TabIndex = 0;
             this.label3.Text = "New Objects:";
             // 
-            // label8
+            // label9
             // 
-            this.label8.AutoSize = true;
-            this.label8.Location = new System.Drawing.Point(6, 139);
-            this.label8.Name = "label8";
-            this.label8.Size = new System.Drawing.Size(112, 13);
-            this.label8.TabIndex = 6;
-            this.label8.Text = "Debugged Processes:";
+            this.label9.AutoSize = true;
+            this.label9.Location = new System.Drawing.Point(6, 166);
+            this.label9.Name = "label9";
+            this.label9.Size = new System.Drawing.Size(98, 13);
+            this.label9.TabIndex = 7;
+            this.label9.Text = "Service Processes:";
             // 
-            // colorBeingDebugged
+            // colorServiceProcesses
             // 
-            this.colorBeingDebugged.Color = System.Drawing.Color.Transparent;
-            this.colorBeingDebugged.Location = new System.Drawing.Point(127, 137);
-            this.colorBeingDebugged.Name = "colorBeingDebugged";
-            this.colorBeingDebugged.Size = new System.Drawing.Size(40, 20);
-            this.colorBeingDebugged.TabIndex = 3;
+            this.colorServiceProcesses.Color = System.Drawing.Color.Transparent;
+            this.colorServiceProcesses.Location = new System.Drawing.Point(127, 163);
+            this.colorServiceProcesses.Name = "colorServiceProcesses";
+            this.colorServiceProcesses.Size = new System.Drawing.Size(40, 20);
+            this.colorServiceProcesses.TabIndex = 3;
             // 
             // OptionsWindow
             // 
             this.AcceptButton = this.buttonClose;
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(371, 263);
+            this.ClientSize = new System.Drawing.Size(371, 278);
             this.Controls.Add(this.tabControl);
             this.Controls.Add(this.buttonClose);
             this.FormBorderStyle = System.Windows.Forms.FormBorderStyle.FixedDialog;
@@ -391,5 +412,7 @@
         private System.Windows.Forms.CheckBox checkHideHandlesNoName;
         private System.Windows.Forms.Label label8;
         private ProcessHacker.Components.ColorModifier colorBeingDebugged;
+        private System.Windows.Forms.Label label9;
+        private ProcessHacker.Components.ColorModifier colorServiceProcesses;
     }
 }
