@@ -48,6 +48,7 @@ namespace ProcessHacker
             colorOwnProcesses.Color = Properties.Settings.Default.ColorOwnProcesses;
             colorSystemProcesses.Color = Properties.Settings.Default.ColorSystemProcesses;
             colorBeingDebugged.Color = Properties.Settings.Default.ColorBeingDebugged;
+            colorServiceProcesses.Color = Properties.Settings.Default.ColorServiceProcesses;
         }
 
         private void textUpdateInterval_Leave(object sender, EventArgs e)
@@ -89,6 +90,7 @@ namespace ProcessHacker
             Properties.Settings.Default.ColorOwnProcesses = colorOwnProcesses.Color;
             Properties.Settings.Default.ColorSystemProcesses = colorSystemProcesses.Color;
             Properties.Settings.Default.ColorBeingDebugged = colorBeingDebugged.Color;
+            Properties.Settings.Default.ColorServiceProcesses = colorServiceProcesses.Color;
 
             HighlightedListViewItem.HighlightingDuration = Properties.Settings.Default.HighlightingDuration;
             HighlightedListViewItem.Colors[ListViewItemState.New] = Properties.Settings.Default.ColorNewProcesses;
