@@ -164,5 +164,8 @@
     <Setting Name="ColorBeingDebugged" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">204, 187, 255</Value>
     </Setting>
+    <Setting Name="ColorServiceProcesses" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">204, 255, 255</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
