@@ -169,6 +169,9 @@
             <setting name="ColorBeingDebugged" serializeAs="String">
                 <value>204, 187, 255</value>
             </setting>
+            <setting name="ColorServiceProcesses" serializeAs="String">
+                <value>204, 255, 255</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
